--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Devlinks</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="container">
+      <div id="profile">
+        <img
+          src="https://github.com/carloscrw.png"
+          alt="Foto de Carlos Henrique Sorrindo, usuando camisa azul "
+        />
+        <p>@carloscrw</p>
+      </div>
+      <div id="switch" onclick="toggleMode()">
+        <button></button>
+        <span></span>
+      </div>
+      <ul>
+        <li>
+          <a href="#" target="_blank">Inscreva-se no NLW</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Baixe meu e-book</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Veja meu portfólio</a>
+        </li>
+        <li>
+          <a href="#" target="_blank">Conheça o Explorer</a>
+        </li>
+      </ul>
+      <div id="social-links">
+        <a href="#" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+        <a href="#" target="_blank">
+          <ion-icon name="logo-discord"></ion-icon>
+        </a>
+        <a href="#" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+          <a href="#" target="_blank">
+            <ion-icon name="mail-outline"></ion-icon>
+          </a>
+        </a>
+      </div>
+      <footer>
+        Feito com <span>♥</span> pelo Carlos Henrique e
+        <a href="https://www.rocketseat.com.br/">Rocketseat</a>
+      </footer>
+    </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
 
+    <script src="./script.js"></script>
   </body>
 </html>
