fix: animation button

--- a/index.html
+++ b/index.html
@@ -27,28 +27,33 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Inscreva-se no NLW</a>
+          <a href="https://drive.google.com/file/d/1-pNiK3U-DaYD0LhdZ7ur1CV_nu31pIBL/view?usp=sharing" target="_blank">Currículo</a>
         </li>
         <li>
-          <a href="#" target="_blank">Baixe meu e-book</a>
+          <a href="https://docs.google.com/presentation/d/1yb7rd2auFItVsX7xK5GASeipm-EwYVItvlA05ypmAQ0/edit?usp=sharing" target="_blank"> Certificados</a>
         </li>
         <li>
-          <a href="#" target="_blank">Veja meu portfólio</a>
+          <a href="https://github.com/carloscrw" target="_blank"
+            >Veja meu portfólio</a
+          >
         </li>
         <li>
-          <a href="#" target="_blank">Conheça o Explorer</a>
+          <a href="https://www.rocketseat.com.br/" target="_blank"
+            >Conheça o Explorer</a
+          >
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/carlos-henrique-araujo-a52875205"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        <a href="#" target="_blank">
-          <ion-icon name="logo-discord"></ion-icon>
-        </a>
-        <a href="#" target="_blank">
+
+        <a href="https://github.com/carloscrw" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
-          <a href="#" target="_blank">
+          <a href="mailto:carlos.c.r.w@gmail.com">
             <ion-icon name="mail-outline"></ion-icon>
           </a>
         </a>
