--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon" />
     <title>Devlinks</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -27,10 +28,19 @@
       </div>
       <ul>
         <li>
-          <a href="https://drive.google.com/file/d/1-pNiK3U-DaYD0LhdZ7ur1CV_nu31pIBL/view?usp=sharing" target="_blank">Currículo</a>
+          <a
+            href="https://drive.google.com/file/d/1-pNiK3U-DaYD0LhdZ7ur1CV_nu31pIBL/view?usp=sharing"
+            target="_blank"
+            >Currículo</a
+          >
         </li>
         <li>
-          <a href="https://docs.google.com/presentation/d/1yb7rd2auFItVsX7xK5GASeipm-EwYVItvlA05ypmAQ0/edit?usp=sharing" target="_blank"> Certificados</a>
+          <a
+            href="https://docs.google.com/presentation/d/1yb7rd2auFItVsX7xK5GASeipm-EwYVItvlA05ypmAQ0/edit?usp=sharing"
+            target="_blank"
+          >
+            Certificados</a
+          >
         </li>
         <li>
           <a href="https://github.com/carloscrw" target="_blank"
